--- a/files/apache-horizon.template
+++ b/files/apache-horizon.template
@@ -1,4 +1,4 @@
-<VirtualHost *:80>
+<VirtualHost %HORIZON_HOST%:%HORIZON_PORT%>
     WSGIScriptAlias / %HORIZON_DIR%/openstack_dashboard/wsgi/django.wsgi
     WSGIDaemonProcess horizon user=%USER% group=%GROUP% processes=3 threads=10 home=%HORIZON_DIR%
     WSGIApplicationGroup %{GLOBAL}
