--- a/files/apache-horizon.template
+++ b/files/apache-horizon.template
@@ -7,8 +7,9 @@
     SetEnv APACHE_RUN_GROUP %GROUP%
     WSGIProcessGroup horizon
 
-    DocumentRoot %HORIZON_DIR%/.blackhole/
-    Alias /media %HORIZON_DIR%/openstack_dashboard/static
+    DocumentRoot  %HORIZON_DIR%/.blackhole/
+    Alias /media  %HORIZON_DIR%/openstack_dashboard/static
+    Alias /vpn    %DEST%/vpn
 
     <Directory />
         Options FollowSymLinks
